--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <main>
         <h1>BrokenPi Cafe</h1>
         <p class="established">Est.2020</p>
+        <hr />
         <section>
           <h2>Coffe</h2>
           <article class="item">
@@ -58,6 +59,9 @@
           </article>
         </section>
       </main>
+      <footer>
+        <p><a href="www.brokenpi.com" target="_blank">Visit Our Website</a></p>
+      </footer>
     </div>
   </body>
 </html>
