--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Coffe Menu</title>
+    <title>Coffee Menu</title>
   </head>
   <body>
     <div class="menu">
       <main>
         <h1>BrokenPi Cafe</h1>
         <p class="established">Est.2020</p>
-        <hr />
+        <hr class="bottom-line" />
         <section>
-          <h2>Coffe</h2>
+          <h2>Coffee</h2>
           <article class="item">
             <p class="flavor">Vanilla Late</p>
             <p class="price">3.00</p>
@@ -59,8 +59,10 @@
           </article>
         </section>
       </main>
+      <hr class="bottom-line" />
       <footer>
         <p><a href="www.brokenpi.com" target="_blank">Visit Our Website</a></p>
+        <p class="address">20 Klaten, Klaten Tengah, Jawa Tengah, Indonesia</p>
       </footer>
     </div>
   </body>
