--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <hr class="bottom-line" />
         <section>
           <h2>Coffee</h2>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg"
+            alt="coffee icon"
+          />
           <article class="item">
             <p class="flavor">Vanilla Late</p>
             <p class="price">3.00</p>
