--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </section>
         <section>
           <h2>Dessert</h2>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg"
+            alt="pie icon"
+          />
           <article class="item">
             <p class="dessert">Gorengan</p>
             <p class="price">1.50</p>
